--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ body{
 
 .container{
     max-width: 1290px;
-    min-width: 1290px;
+    /*min-width: 1290px;*/
     padding: 0 35px;
     margin: 0 auto;
 }
@@ -121,7 +121,7 @@ body{
 .banner__two-description-title{
     font-size: 60px;
     font-weight: bold;
-    width: 60%;
+    width: 100%;
 
 }
 /* BANNER-2 END */
@@ -159,4 +159,65 @@ body{
     font-weight: bold;
 }
 
-/*  CONTENT PAGE START  */
+/*  CONTENT PAGE END  */
+
+
+/*  @MEDIA ADAPTATION START */
+@media (max-width: 1200px) {
+    .banner__one{
+        margin: 30px 0;
+    }
+    .content__page{
+        margin: 30px 0;
+    }
+    .container{
+            max-width: 992px;
+       .banner__images{
+            max-width: 50%;
+            }
+       .banner__two-description-title{
+           text-align: center;
+        }
+       .content__page-images{
+           max-width: 50%;
+        }
+    }
+}
+
+@media (max-width: 992px) {
+    .container{
+        max-width: 768px;
+        .header__content-right{
+             display: none;
+        }
+        .content__banner-1{
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+
+        }
+        .banner__description{
+            align-items: center;
+            margin: 0;
+            max-width: 100%;
+        }
+
+    }
+}
+
+
+@media (max-width: 768px) {
+     .container{
+       max-width: 576px;
+
+    }
+}
+
+@media (max-width: 578px) {
+    .container{
+            max-width: 100%;
+        }
+
+}
+
+/*  @MEDIA ADAPTATION END  */
